<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="locale"
    tools:ignore="UnusedAttribute"
    android:orientation="horizontal"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/custom_dialog_bg"
        android:padding="@dimen/_25sdp">
        <LinearLayout
            android:id="@+id/llCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                app:srcCompat="@drawable/ic_camera_upload"
                android:contentDescription="@string/app_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/colorGrayDark"
                android:text="@string/take_photo"/>
        </LinearLayout>

        <View
            style="@style/formHorLineView"
            android:background="@color/colorGray"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"/>

        <LinearLayout
            android:id="@+id/llGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/ic_gallery_upload"
                android:contentDescription="@string/app_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/colorGrayDark"
                android:text="@string/choose_image"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>